# mpv_inhibit_gnome

./: .ccls  .clang-format  .editorconfig  .gitignore  LICENSE  Makefile  README.md  compile_flags.txt  install.sh  meson.build
.github/workflows/: release.yml
src/: dbus_helper.c  dbus_helper.h  gnome_session_manager.c  gnome_session_manager.h  main.c
